# mandelbrot_cpp_viewer

./: .gitignore  CHANGES.txt  CMakeLists.txt  COPYING.LESSER.txt  INFO.txt  LICENSE  NOTICE.txt  README.md  TinyBitmapOut.cpp  TinyBitmapOut.hpp  appveyor.yml  const_init.hpp  icon.rc  main.cpp  main_init.hpp  mdbl.hpp  pool.hpp  resource_t.hpp  run.bat  script.sh
.circleci/: config.yml
include/: TinyBitmapOut.hpp  const_init.hpp  hsv.hpp  main_init.hpp  mdbl.hpp  pool.hpp  resource_t.hpp
src/: TinyBitmapOut.cpp  main.cpp
test/: test.cpp
